--- a/url-shortner-webapp/src/app/input-long-url/input-long-url.component.html
+++ b/url-shortner-webapp/src/app/input-long-url/input-long-url.component.html
@@ -1,6 +1,26 @@
-<form class="example-form">
-<mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Favorite food</mat-label>
-    <input matInput placeholder="Ex. Pizza" value="Sushi">
+<div class="wrapper">
+<h3>Welcome to your URL shortner!</h3>
+<form [formGroup]="urlShortnerForm" (ngSubmit)="getShortURL()" novalidate>
+<mat-form-field class="full-width" appearance="fill">
+    <mat-label>Enter long URL</mat-label>
+    <input type="text" matInput placeholder="Ex. https://www.google.com/" formControlName="long_url">
+    <mat-error *ngIf="urlShortnerForm?.get('long_url')?.errors?.['required']">
+      URL is required.
+    </mat-error>
+    <mat-error *ngIf="urlShortnerForm?.get('long_url')?.errors?.['pattern']">
+      Please enter a valid URL.
+    </mat-error>
   </mat-form-field>
+  <mat-form-field appearance="fill" class="full-width">
+    <mat-label>Choose an expiration date</mat-label>
+    <input matInput [matDatepicker]="picker" formControlName="expiration_date">
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+    <mat-error *ngIf="urlShortnerForm?.get('expiration_date')?.errors?.['required']">
+      Expiration Date is required.
+    </mat-error>
+  </mat-form-field>
+<button mat-raised-button color="primary" type="submit">Get short URL</button>
 </form>
+</div>
