--- a/url-shortner-webapp/src/app/input-long-url/input-long-url.component.scss
+++ b/url-shortner-webapp/src/app/input-long-url/input-long-url.component.scss
@@ -1,9 +1,14 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+.wrapper {
+    // min-width: 150px;
+    // max-width: 500px;
+    width: 80%;
+    margin: auto;
+    margin-top: 10%;
+    align-items: center;
+    text-align: center;
   }
   
-  .example-full-width {
+  .full-width {
     width: 100%;
+    margin: auto;
   }
