--- a/url-shortner-webapp/src/app/input-long-url/dialog-short-url.html
+++ b/url-shortner-webapp/src/app/input-long-url/dialog-short-url.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>{{ title }}</h1>
-<div mat-dialog-content>{{ content }}</div>
+<div mat-dialog-content [innerHTML]="content"></div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>OK</button>
 </div>
