Add update and delete

--- a/url-shortner-webapp/src/app/app.component.html
+++ b/url-shortner-webapp/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-input-long-url></app-input-long-url>
+<div class="d-flex flex-column sticky-footer-wrapper">
+
+    <div class="flex-fill bg-wild-sand">
+      <router-outlet></router-outlet>
+    </div>
+  
+  </div>
