--- a/url_shortner_server/templates/authentication/signup.html
+++ b/url_shortner_server/templates/authentication/signup.html
@@ -6,12 +6,8 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Colorlib Templates">
-    <meta name="author" content="Colorlib">
-    <meta name="keywords" content="Colorlib Templates">
-
     <!-- Title Page-->
-    <title>Au Register Forms by Colorlib</title>
+    <title>URL Shortner</title>
 
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -42,7 +38,7 @@
         <div class="wrapper wrapper--w680">
             <div class="card card-4">
                 <div class="card-body">
-                    <h2 class="title">Registration Form</h2>
+                    <h2 class="title" style="text-align: center;">Sign Up</h2>
 
                     <!--   # ======================================== FORM ========================================     -->
                     <form method="POST" action="/signup">
@@ -51,7 +47,7 @@
                             <div class="col-3">
                                 <div class="input-group form-group">
                                     <label for="username" class="label">Username</label>
-                                    <input type="text" class="form-control input--style-4" id="username" name="username" placeholder="Create A Username (use only letters and numbers)" Required>
+                                    <input type="text" class="form-control input--style-4" id="username" name="username" placeholder="Username" Required>
                                 </div>
                             </div>
 
@@ -73,60 +69,34 @@
                             <div class="col-3">
                                 <div class="form-group input-group">
                                     <label for="fname">First Name</label>
-                                    <input type="text" class="form-control input--style-4" id="fname" name="fname" placeholder="Enter Your First Name" Required>
+                                    <input type="text" class="form-control input--style-4" id="fname" name="fname" placeholder="First Name" Required>
                                 </div>
                             </div>
 
                             <div class="col-3">
                                 <div class="form-group input-group">
                                     <label for="lname">Last Name</label>
-                                    <input type="text" class="form-control input--style-4" id="lname" name="lname" placeholder="Enter Your Last Name" Required>
+                                    <input type="text" class="form-control input--style-4" id="lname" name="lname" placeholder="Last Name" Required>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="row row-space">
-                            <div class="col-2">
-                                <div class="input-group">
-                                    <label class="label">Birthday</label>
-                                    <div class="input-group-icon">
-                                        <input class="input--style-4 js-datepicker" type="text" name="birthday">
-                                        <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-2">
-                                <div class="input-group">
-                                    <label class="label">Gender</label>
-                                    <div class="p-t-10">
-                                        <label class="radio-container m-r-45">Male
-                                            <input type="radio" checked="checked" name="gender">
-                                            <span class="checkmark"></span>
-                                        </label>
-                                        <label class="radio-container">Female
-                                            <input type="radio" name="gender">
-                                            <span class="checkmark"></span>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="row row-space">
                             <div class="col-3">
                                 <div class="form-group input-group">
                                     <label for="email">Email</label>
-                                    <input type="email" class="form-control input--style-4" id="email" name="email" placeholder="Enter Your Email Address" Required>
+                                    <input type="email" class="form-control input--style-4" id="email" name="email" placeholder="Email" Required>
                                 </div>
                             </div>
                             <div class="col-3">
                                 <div class="form-group input-group">
                                     <label for="pass1">Password</label>
-                                    <input type="password" class="form-control input--style-4" id="pass1" name="pass1" placeholder="Create Your Password" Required>
+                                    <input type="password" class="form-control input--style-4" id="pass1" name="pass1" placeholder="Password" Required>
                                 </div>
                             </div>
                             <div class="col-3">
                                 <div class="form-group input-group">
                                     <label for="pass2">Confirm Password</label>
-                                    <input type="password" class="form-control input--style-4" id="pass2" name="pass2" placeholder="Confirm Your Password" Required>
+                                    <input type="password" class="form-control input--style-4" id="pass2" name="pass2" placeholder="Confirm Password" Required>
                                 </div> 
                             </div>
                         </div>
