--- a/url_shortner_server/templates/authentication/signup.html
+++ b/url_shortner_server/templates/authentication/signup.html
@@ -1,125 +1,151 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <!-- Required meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Title Page-->
-    <title>URL Shortner</title>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+ <title> Sign up </title>
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+ <style>
+ body {
+     color: #999;
+     background: #f3f3f3;
+     font-family: 'Roboto', sans-serif;
+ }
+ .form-control {
+     border-color: #eee;
+     min-height: 41px;
+     box-shadow: none !important;
+ }
+ .form-control:focus {
+     border-color: #5cd3b4;
+ }
+ .form-control, .btn {        
+     border-radius: 3px;
+ }
+ .signup-form {
+     width: 500px;
+     margin: 0 auto;
+     padding: 30px 0;
+ }
+ .signup-form h2 {
+     color: #333;
+     margin: 0 0 30px 0;
+     display: inline-block;
+     padding: 0 30px 10px 0;
+     border-bottom: 3px solid #5cd3b4;
+ }
+ .signup-form form {
+     color: #999;
+     border-radius: 3px;
+     margin-bottom: 15px;
+     background: #fff;
+     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+     padding: 30px;
+ }
+ .signup-form .form-group row {
+     margin-bottom: 20px;
+ }
+ .signup-form label {
+     font-weight: normal;
+     font-size: 14px;
+     line-height: 2;
+ }
+ .signup-form input[type="checkbox"] {
+     position: relative;
+     top: 1px;
+ }
+ .signup-form .btn {        
+     font-size: 16px;
+     font-weight: bold;
+     background: #5cd3b4;
+     border: none;
+     margin-top: 20px;
+     min-width: 140px;
+ }
+ .signup-form .btn:hover, .signup-form .btn:focus {
+     background: #41cba9;
+     outline: none !important;
+ }
+ .signup-form a {
+     color: #5cd3b4;
+     text-decoration: underline;
+ }
+ .signup-form a:hover {
+     text-decoration: none;
+ }
+ .signup-form form a {
+     color: #5cd3b4;
+     text-decoration: none;
+ }	
+ .signup-form form a:hover {
+     text-decoration: underline;
+ }
+ </style>
+ </head>
+ <body>
 
-    <!-- Icons font CSS-->
-    <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
-    <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
-    <!-- Font special for pages-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <!-- Vendor CSS-->
-    <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
-
-    <!-- Main CSS-->
-    <!-- <link href="css/main.css" rel="stylesheet" media="all"> -->
-    <link rel="stylesheet" href="{% static 'main.css' %}">
-</head>
-
-<body>
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-        <strong>Message:</strong> {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+	@@ -17,34 +99,56 @@
     </div>
     {% endfor %}
 
-    <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
-        <div class="wrapper wrapper--w680">
-            <div class="card card-4">
-                <div class="card-body">
-                    <h2 class="title" style="text-align: center;">Sign Up</h2>
-
-                    <!--   # ======================================== FORM ========================================     -->
-                    <form method="POST" action="/signup">
-                        {% csrf_token %}
-                        <div class="row row-space">
-                            <div class="col-3">
-                                <div class="input-group form-group">
-                                    <label for="username" class="label">Username</label>
-                                    <input type="text" class="form-control input--style-4" id="username" name="username" placeholder="Username" Required>
-                                </div>
-                            </div>
-
-                            <!-- 
-
-                            <div class="form-group">
-                                <label for="pass1">Password</label>
-                                <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Create Your Password" Required>
-                            </div>
-                            <div class="form-group">
-                                <label for="pass2">Confirm Password</label>
-                                <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Confirm Your Password" Required>
-                            </div> 
-                        -->
-
-    
-
-
-                            <div class="col-3">
-                                <div class="form-group input-group">
-                                    <label for="fname">First Name</label>
-                                    <input type="text" class="form-control input--style-4" id="fname" name="fname" placeholder="First Name" Required>
-                                </div>
-                            </div>
-
-                            <div class="col-3">
-                                <div class="form-group input-group">
-                                    <label for="lname">Last Name</label>
-                                    <input type="text" class="form-control input--style-4" id="lname" name="lname" placeholder="Last Name" Required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row row-space">
-                            <div class="col-3">
-                                <div class="form-group input-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control input--style-4" id="email" name="email" placeholder="Email" Required>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="form-group input-group">
-                                    <label for="pass1">Password</label>
-                                    <input type="password" class="form-control input--style-4" id="pass1" name="pass1" placeholder="Password" Required>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="form-group input-group">
-                                    <label for="pass2">Confirm Password</label>
-                                    <input type="password" class="form-control input--style-4" id="pass2" name="pass2" placeholder="Confirm Password" Required>
-                                </div> 
-                            </div>
-                        </div>
-                        <div class="p-t-15">
-                            <button type="submit" class="btn btn-primary">Sign Up</button>                            
-                        </div>
-                    </form>
-                    <!--   # ======================================================================================     -->
-                </div>
-            </div>
+ <div class="signup-form">
+     <form action="/signup" method="post" class="form-horizontal">
+           <div class="row">
+             <div class="col-8 offset-4">
+                 <h2>Sign Up</h2>
+             </div>	
+           </div>			
+         <div class="form-group row">
+             <label for="username" class="col-form-label col-4">Username</label>
+             <div class="col-8">
+                 <input type="text" class="form-control" id="username" name="username" required="required">
+             </div>        	
+         </div>
+         <div class="form-group row">
+            <label for="fname" class="col-form-label col-4">First Name</label>
+            <div class="col-8">
+                <input type="text" class="form-control" id="fname" name="fname" required="required">
+            </div>        	
         </div>
-    </div>
-
-    <!-- Jquery JS-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <!-- Vendor JS-->
-    <script src="vendor/select2/select2.min.js"></script>
-    <script src="vendor/datepicker/moment.min.js"></script>
-    <script src="vendor/datepicker/daterangepicker.js"></script>
-
-    <!-- Main JS-->
-    <script src="{% static 'global.js' %}"></script>
-
-</body>
-
-</html>
+        <div class="form-group row">
+            <label for="lname" class="col-form-label col-4">Last Name</label>
+            <div class="col-8">
+                <input type="text" class="form-control" id="lname" name="lname" required="required">
+            </div>        	
+        </div>
+         <div class="form-group row">
+             <label for="email" class="col-form-label col-4">Email Address</label>
+             <div class="col-8">
+                 <input type="email" class="form-control" id="email" name="email" required="required">
+             </div>        	
+         </div>
+         <div class="form-group row">
+             <label for="pass1" class="col-form-label col-4">Password</label>
+             <div class="col-8">
+                 <input type="password" class="form-control" id="pass1" name="pass1" required="required">
+             </div>        	
+         </div>
+         <div class="form-group row">
+             <label for="pass2" class="col-form-label col-4">Confirm Password</label>
+             <div class="col-8">
+                 <input type="password" class="form-control" name="pass2" id="pass2" required="required">
+             </div>        	
+         </div>
+         <div class="form-group row">
+             <div class="col-8 offset-4">
+                 <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+             </div>  
+         </div>		      
+     </form>
+     <div class="text-center">Already have an account? <a href="/signin">Login here</a></div>
+ </div>
+ </body>
+ </html>
